<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/logo3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/txt1"
            android:textColor="#fff"
            android:textSize="36dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TableRow
                android:id="@+id/tr_page_network_game_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:clickable="true"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="false"
                    app:srcCompat="@drawable/style_btn_search_game" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="15dp"
                    android:text="@string/txt36"
                    android:textColor="@drawable/style_text_in_btn_1"
                    android:textSize="24dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tr_page_network_game_raiting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:clickable="true"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="false"
                    app:srcCompat="@drawable/style_btn_rating" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="15dp"
                    android:text="@string/txt37"
                    android:textColor="@drawable/style_text_in_btn_1"
                    android:textSize="24dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tr_page_network_game_create_game"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:clickable="true"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="false"
                    app:srcCompat="@drawable/style_btn_add_game" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="15dp"
                    android:text="@string/txt38"
                    android:textColor="@drawable/style_text_in_btn_1"
                    android:textSize="24dp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</FrameLayout>