<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_template_info_user_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/default_avatar" />

    <TextView
        android:id="@+id/tv_template_info_user_popup_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textColor="#111"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/stat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/txt_51"
                android:textColor="#111"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_template_info_user_popup_total_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#111"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/total_win" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/txt_52"
                android:textColor="#111"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_template_info_user_popup_wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#111"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/mars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/txt_56"
                android:textColor="#111"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_template_info_user_popup_mars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#111"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/game_over" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/txt_54"
                android:textColor="#111"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_template_info_user_popup_defeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#111"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/draw" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/txt_55"
                android:textColor="#111"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_template_info_user_popup_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#111"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>